--- a/src/assets/style/layout/_common_hd_ft.scss
+++ b/src/assets/style/layout/_common_hd_ft.scss
@@ -101,7 +101,6 @@ Copyright 2021 Hitachi, Ltd.
 
   .inner {
     width: 92.2%;
-    max-width: 890px;
     margin-right: auto;
     margin-left: auto;
   }
@@ -124,8 +123,7 @@ Copyright 2021 Hitachi, Ltd.
 
   .button.-button-01 {
     width: 100%;
-    max-width: 880px;
-    height: 82px;
+    height: 90px;
     border: 4px solid #fff;
   }
 
@@ -166,7 +164,7 @@ Copyright 2021 Hitachi, Ltd.
     letter-spacing: 0.25rem;
     display: block;
     position: relative;
-    margin-top: -90px;
+    margin-top: -94px;
     @include mq_up(pc) {
       @include fs (50, 110);
     }
@@ -367,7 +365,7 @@ body.header1-fix.header1-show #HeaderArea1 {
 /* Statement
 =========================================================================================== */
 #Statement {
-    height: 45px;
+    height: 50px;
     margin-right: auto;
     display: block;
     display: -ms-flexbox;
@@ -481,6 +479,9 @@ body.header1-fix.header1-show #HeaderArea1 {
 }
 
 @media screen and (max-width: 767px) {
+  #Statement {
+    height: 45px;
+  }
 
     #HeaderArea1 > .l-container #SupportNavi > a,
     #HeaderArea1 > .l-container #SupportNavi > button > span {
@@ -566,7 +567,7 @@ body.header1-fix.header1-show #HeaderArea1 {
     background-size: 15px 12px;
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url(../../../image/jp/r1/common2/icon_checkmark.png);
+    background-image: url(../images/common2/icon_checkmark.png);
 }
 
 #HeaderArea1.countrymenu-open {
@@ -784,7 +785,7 @@ body.header2-fix #HeaderArea2.Sticky #HorizontalLocalNavi {
 #GlobalNaviMenu > li > button > span {
     padding: 0 15px;
     font-size: 83%;
-    height: 60px;
+    height: 66px;
     line-height: 1.2;
     text-align: center;
     box-sizing: border-box;
@@ -822,12 +823,12 @@ body.header2-fix #HeaderArea2.Sticky #HorizontalLocalNavi {
     color: #fff;
     background-color: #b1000e;
     padding: 0 15px;
-    height: 60px;
+    height: 66px;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-align: center;
     align-items: center;
-    background-image: url(../../../image/jp/r1/bg_g_navi_current.gif);
+    background-image: url(../images/bg_g_navi_current.gif);
     background-position: center bottom;
     background-repeat: no-repeat;
 }
@@ -842,7 +843,7 @@ body.header2-fix #HeaderArea2.Sticky #HorizontalLocalNavi {
     display: flex;
     -ms-flex-align: center;
     align-items: center;
-    background-image: url(../../../image/jp/r1/bg_g_navi_current.gif);
+    background-image: url(../images/bg_g_navi_current.gif);
     background-position: center bottom;
     background-repeat: no-repeat;
 }
@@ -1709,7 +1710,7 @@ body.menu-open #SpMenuModal {
     background-size: 15px 12px;
     background-repeat: no-repeat;
     background-position: 50px center;
-    background-image: url(../../../image/jp/r1/common2/icon_checkmark.png);
+    background-image: url(../images/common2/icon_checkmark.png);
 }
 
 #SpSupportNavi a::before,
@@ -1900,7 +1901,7 @@ body.menu-open #SpMenuModal {
     justify-content: space-between;
     -ms-flex-align: center;
     align-items: center;
-    margin-bottom: 14px;
+    margin-bottom: 22px;
 }
 
 #SnsButton {
